fix(arc-1240): reduce column gap for image grid block, so 3 items fit
https://meemoo.atlassian.net/browse/ARC-1240

--- a/src/styles/admin-core/content-blocks/_content-block-image-grid.scss
+++ b/src/styles/admin-core/content-blocks/_content-block-image-grid.scss
@@ -4,7 +4,7 @@ $component: "c-content-block__image-grid";
 
 .#{$component} {
 	.c-block-grid {
-		column-gap: 4rem;
+		column-gap: 3.4rem;
 		row-gap: 8rem;
 		justify-content: space-between;
 
